--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     video {
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      object-fit: contain;
       position: absolute;
       top: 0;
       left: 0;
