--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       clearTimeout(timer);
       timer = setTimeout(() => {
         mostraEsfera();
-      }, 8000); //  segons sense moviment → esfera
+      }, 4000); // 4 segons sense moviment → esfera
     });
   </script>
 
