--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   <video id="videoPrincipal" src="video_principal.mp4" playsinline></video>
 
   <!-- Vídeo de loop/esfera -->
-  <video id="videoEsfera" src="loop_esfera.mp4" loop muted playsinline style="display:none;"></video>
+  <video id="videoEsfera" src="loop_esfera.mp4" loop playsinline style="display:none;"></video>
+
 
   <script>
     const overlay = document.getElementById('overlay');
