--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
   <!-- Pantalla inicial per demanar interacció -->
-  <div id="overlay">Fes clic per començar</div>
+  <div id="overlay">PLAY</div>
 
   <!-- Vídeo principal amb so -->
   <video id="videoPrincipal" src="video_principal.mp4" playsinline></video>
@@ -80,7 +80,7 @@
       clearTimeout(timer);
       timer = setTimeout(() => {
         mostraEsfera();
-      }, 22000); // 22 segons sense moviment → esfera
+      }, 23000); // 23 segons sense moviment → esfera
     });
   </script>
 
